<resources>
    <string name="app_name">BKZola</string>
    <string name="welcome_back">Welcome back</string>
    <string name="chao_ban_quay_tro_lai">Chào bạn quay trở lại</string>
    <string name="dang_nhap_de_tiep_tuc">Đăng nhập để tiếp tục</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="tao_tai_khoan_moi">Tạo tài khoản mới</string>
    <string name="tai_anh_len">Tải ảnh lên</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="channel_name">Notifycation</string>
    <string name="channel_description">This is Notifycation</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_profile">Profile</string>
    <string name="xac_minh_otp">Xác Minh OTP</string>
    <string name="gui_1_ma_otp">Chúng tôi sẽ gửi cho bạn mã OTP trên số điện thoại này</string>
    <string name="nhap_sdt">Nhập Số Điện Thoại</string>
    <string name="so_dien_thoai">Số Điện Thoại</string>
    <string name="_84">+84-</string>
    <string name="_123456789">123456789</string>
    <string name="nhap_ma_otp">Nhập mã OTP</string>
    <string name="khong_nhan_duoc_ma_otp">Không nhận được mã OTP?</string>
    <string name="gui_lai_otp">Gửi lại mã OTP</string>
    <string name="Xac_minh_otp">XÁC MINH</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="sua_thong_tin">Sửa thông tin</string>
    <string name="luu_thong_tin">Lưu thông tin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tro_lai_dang_nhap">Trở lại đăng nhập ?</string>

</resources>